基本功能具备

--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="preview_background">#242424</color>
+    <color name="dark_write">#FFFAFA</color>
+    <color name="item_background">#8000</color>
 </resources>
