--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -6,24 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-
     <RelativeLayout
         android:id="@+id/rel_layout"
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
         android:layout_height="44dp">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageButton
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@mipmap/backbutton"
             android:id="@+id/back_button"
-            android:text="后退"
+            android:layout_margin="8dp"
             android:layout_alignParentStart="true"
             />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
             android:id="@+id/city_title"
             android:layout_centerInParent="true"
             />
@@ -36,5 +35,14 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
   </ListView>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/loading_anim"
+        android:visibility="gone"
+        android:id="@+id/progress"
+        />
 
 </RelativeLayout>
