--- a/src/main/res/layout/activity_weather.xml
+++ b/src/main/res/layout/activity_weather.xml
@@ -8,6 +8,16 @@
     android:background="@mipmap/allback"
     tools:context=".WeatherActivity">
 
+    <ImageButton
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/menu_button"
+        android:visibility="gone"
+        >
+    </ImageButton>
+
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -17,19 +27,6 @@
         android:layout_centerInParent="true"
         />
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/menu_button"
-        android:background="@color/colorAccent"
-        >
-    </android.support.design.widget.FloatingActionButton>
-
-
-
     <view.NestScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -37,6 +34,7 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
                 <RelativeLayout
                     android:id="@+id/titlebar"
                     android:layout_width="match_parent"
@@ -71,7 +69,6 @@
                         android:textSize="12sp"
                         />
                 </RelativeLayout>
-
 
                 <RelativeLayout
                     android:id="@+id/fore_daily_relativelayout"
